crates/crypto/src/olm/group_sessions/snapshots/snapshot_forwarder_data-2.snap
---
source: crates/crypto/src/olm/group_sessions/forwarder_data.rs
expression: "ForwarderData::SenderVerified(KnownSenderData\n{\n    user_id: owned_user_id!(\"@foo:bar.baz\"), device_id: None, master_key:\n    Box::new(Ed25519PublicKey::from_slice(&[1u8; 32]).unwrap()),\n})"
---
{
  "SenderVerified": {
    "user_id": "@foo:bar.baz",
    "device_id": null,
    "master_key": "AQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQE"
  }
}
